# spatial-manifolds

./: .gitignore  README.md  pyproject.toml
HPC/: for_all.sh  summarise.sh
HPC/preprocessing/: all.sh  cleanup.sh  preprocess.sh  stagein.sh  stageout.sh
HPC/scripts/: tuning_scores.sh
data/: README.md
scripts/: for_all.sh
scripts/CEBRA/: script.py
scripts/TCA/: script.py
scripts/crosscorr/: GLM.py  script.py
scripts/eddie/: run_eddie_GC_xgboost_assay.py  test_eddie_scipt.py  test_script.sh
scripts/example_usage/: cheatsheet.ipynb  circular_decoder.ipynb  load_all_sessions.ipynb  plot_of_egocentric_autocorrelogram.ipynb  plot_of_rate_map.ipynb  plot_rate_map.ipynb  plot_rate_mapv2.ipynb  plot_score_distribution.ipynb  plot_sprectrogram.ipynb
scripts/figures/: FIG3_GRID_VS_NONGRID_2.ipynb  FIGURE1_DECODING_TEST_VS_TRAIN_Petitt_analysis.ipynb  FIGURE1_PLOT_TORUS_ANIMATION.ipynb  FIGUREX_M29D23_xgboost.ipynb  SUPPFIG_HDBSCAN.ipynb  SUPPFIG_HDBSCAN_parameter_search.ipynb  SUPP_CELL_LOCATIONS.ipynb  SUPP_FIGURE1_non_grid_spatial_all_sessions.ipynb  SUPP_Xgboost.ipynb  grid_orientation.ipynb  plot_clusters_on_annotated_probe.ipynb  xgboost_assay.py  xgboost_medial_lateral_assay.py
scripts/glms/: script.py
scripts/multicontext/: Hawesetal2025_experimental_fig.ipynb  Hawesetal2025_experimental_fig_v2.ipynb  Hawesetal2025_experimental_fig_v3 copy.ipynb  Hawesetal2025_experimental_fig_v3.ipynb  Hawesetal2025_experimental_fig_v3_runs.ipynb  Hawesetal2025_experimental_fig_v4_no_speed_mods.ipynb  Hawesetal2025_experimental_fig_v5.ipynb  plot_cells.ipynb
scripts/preprocessing/: behaviour.py  sorting.py
scripts/tuning_scores/: plots.py  script.py  summarise.py
src/spatial_manifolds/: CEBRA_decoder.py  CEBRA_decoder_heatmap.py  FIGURE1_ANYMOUSE.py  FIGURE1_ANYMOUSE2.ipynb  FIGURE1_DECODING_COMPARE.py  SUPPFIG_HDBSCAN_parameter_search.ipynb  SUPP_CELL_LOCATIONS.ipynb  SUPP_FIG1_GC_VS_LAG.ipynb  (+19 more)
src/spatial_manifolds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+12 files in other folders)
