[project]
name = "spatial_manifolds"
version = "0.0.1"
description = "Spatial manifolds in the MEC, research package."
readme = "README.md" 
requires-python = "==3.11.*"
dependencies = [
    "einops>=0.8.1",
    "seaborn>=0.13.2",
    "spikeinterface>=0.102.2",
    "statsmodels>=0.14.4",
    "zetapy>=3.0.7",
    "pynwb>=3.0.0",
    "ruff>=0.9.9",
    "ipdb>=0.13.13",
    "pyqt5>=5.15.11",
    "ratinabox>=1.15.3",
    "scikit-image>=0.25.2",
    "opencv-python-headless>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "neuroconv>=0.7.2",
    "nwbinspector>=0.6.3",
    "setuptools>=80.0.1",
    "neo>=0.14.0",
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "nemos>=0.2.3",
    "pynapple==0.8.5",
    "pyglmnet>=1.1",
    "keras>=3.10.0",
    "tensorflow>=2.19.0",
    "xgboost>=3.0.2",
    "hdbscan>=0.8.40",
    "brainrender>=2.1.17",
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
